# Scrabble

./: .gitignore  ArduinoViber.ino  Arduino_Manager.cpp  Arduino_Manager.h  CMakeLists.txt  DoublyLinkedList.h  Ficha.cpp  Ficha.h  Juego.cpp  Juego.h  LCDDisplay.ino  Node.h  TXT_Manager.cpp  TXT_Manager.h  main.cpp  server.h  todo
Copia de App-Sockets/C++/: CMakeLists.txt  Client.cpp  Client.h  main.cpp  server.cpp  server.h
Copia de App-Sockets/MobileApp/main/: AndroidManifest.xml
Copia de App-Sockets/MobileApp/main/java/serverLogic/: ArrayGenerator.java  ArraySorter.java
Copia de App-Sockets/MobileApp/main/res/layout/: activity_main.xml
Scrabble/: CMakeLists.txt  Client.cpp  Scrabble.pro  casilla.cpp  casilla.h  clickablelabel.cpp  clickablelabel.h  clicklabel.h  client.cpp  client.h  collector.cpp  collector.h  ficha.cpp  ficha.h  game.cpp  game.cpp.autosave  game.h  game.ui  jsonparser.cpp  jsonparser.h  list.cpp  list.h  listamano.cpp  listamano.h  listener.cpp  listener.h  lobby.cpp  lobby.h  lobby.ui  main.cpp  mainmenu.cpp  mainmenu.h  mainmenu.ui  matrizgrafica.cpp  matrizgrafica.h  newslist.cpp  newslist.h  resources.qrc  server.h  tablero.cpp  (+2 more)
SendSMSsrc/main/: AndroidManifest.xml
SendSMSsrc/main/res/layout/: activity_main2.xml
Tests/: ClassName.h  test.cpp
build-Scrabble-Desktop_Qt_5_12_0_GCC_64bit2-Debug/: Makefile  moc_clickablelabel.cpp  moc_game.cpp  moc_listamano.cpp  moc_lobby.cpp  moc_mainmenu.cpp  moc_tablero.cpp  qrc_resources.cpp  ui_game.h  ui_lobby.h  ui_mainmenu.h
build-Scrabble-Desktop_Qt_5_12_1_GCC_64bit-Default/: CMakeCache.txt  Makefile  Scrabble  Scrabble.cbp  cmake_install.cmake
build-Scrabble-Desktop_Qt_5_12_1_GCC_64bit-Default/Scrabble_autogen/: moc_predefs.h
build-Scrabble-Desktop_Qt_5_12_1_GCC_64bit-Default/Scrabble_autogen/EWIEGA46WW/: moc_mainmenu.cpp  qrc_qml.cpp
client/: CMakeLists.txt  server.cpp  server.h
images/: png
server/: CMakeLists.txt  Ficha.cpp  Jugador.cpp  ListaFichas.h  Mensaje.cpp  Player.h  Room.cpp  Room.h  TXT_Manager.h  server.cpp  server.h
server2/: Arduino_Manager.cpp  Arduino_Manager.h  CMakeLists.txt  Diccionario.txt  DoublyLinkedList.h  Ficha.h  Juego.cpp  Juego.h  Jugador.h  ListaFichas.cpp  ListaFichas.h  Node.h  Player.cpp  Player.h  Room.cpp  Room.h  TXT_Manager.cpp  TXT_Manager.h  fichatosend.cpp  fichatosend.h  jsonparser.cpp  jsonparser.h  main.cpp  server.cpp  server.h
(+10 files in other folders)
